--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,10 @@ plugins {
 	id 'io.spring.dependency-management' version '1.0.13.RELEASE'
 	id 'java'
 }
+
+apply plugin: 'application'
+
+mainClassName = 'esfot.tesis.botics.BoticsApplication'
 gradle.startParameter.showStacktrace = ShowStacktrace.ALWAYS
 
 group = 'esfot.tesis'
@@ -27,7 +31,7 @@ dependencies {
 	implementation 'javax.validation:validation-api:2.0.1.Final'
 	// https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt
 	implementation group: 'io.jsonwebtoken', name: 'jjwt', version: '0.2'
-	implementation 'org.springframework.boot:spring-boot-starter-mail:2.7.3'
+	implementation 'org.springframework.boot:spring-boot-starter-mail:2.7.4'
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	runtimeOnly 'mysql:mysql-connector-java'
@@ -40,4 +44,17 @@ dependencies {
 
 tasks.named('test') {
 	useJUnitPlatform()
+}
+
+jar {
+
+	duplicatesStrategy = DuplicatesStrategy.EXCLUDE
+
+	manifest {
+		attributes "Main-Class": mainClassName
+	}
+
+	from {
+		configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
+	}
 }
