--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,9 @@ spring.jpa.hibernate.ddl-auto=update
 #Permite habilitar la visualizacion de las consultas SQL en la consola
 spring.jpa.show-sql=true
 #Properties para la configuracion de la base de datos
+#spring.datasource.url=jdbc:mysql://mysql-onedev.alwaysdata.net/onedev_botics
+#spring.datasource.username=onedev
+#spring.datasource.password=Agujeronegro1
 spring.datasource.url=jdbc:mysql://azure-sql.mysql.database.azure.com:3306/botics
 spring.datasource.username=chris
 spring.datasource.password=Agujeronegro1
@@ -14,7 +17,7 @@ spring.messages.cache-seconds=-1
 spring.messages.encoding=UTF-8
 spring.messages.fallback-to-system-locale=true
 #Permite definir el puerto por defecto de la aplicacion, este forma es necesario para el correcto despliegue
-server.port=${PORT:8080}
+server.port=5000
 #Properties para la configuracion del servicio de emails con Gmail
 spring.main.banner-mode=off
 spring.mail.protocol=smtp
