--- a/build.gradle
+++ b/build.gradle
@@ -46,6 +46,11 @@ tasks.named('test') {
 	useJUnitPlatform()
 }
 
+compileJava {
+	sourceCompatibility = '1.8'
+	targetCompatibility = '1.8'
+}
+
 jar {
 
 	duplicatesStrategy = DuplicatesStrategy.EXCLUDE
