--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,12 +3,18 @@ spring.jpa.hibernate.ddl-auto=update
 #Permite habilitar la visualizacion de las consultas SQL en la consola
 spring.jpa.show-sql=true
 #Properties para la configuracion de la base de datos
+#Base de datos Alwaysdata
 #spring.datasource.url=jdbc:mysql://mysql-onedev.alwaysdata.net/onedev_botics
 #spring.datasource.username=onedev
 #spring.datasource.password=Agujeronegro1
+#Base de datos Azure
 spring.datasource.url=jdbc:mysql://azure-sql.mysql.database.azure.com:3306/botics
 spring.datasource.username=chris
 spring.datasource.password=Agujeronegro1
+#Base de datos ESFOT
+#spring.datasource.url=mysql://
+#spring.datasource.username=chris
+#spring.datasource.password=Agujeronegro1
 spring.jpa.properties.hibernate.format_sql=true
 #Properties para la configuracion de archivos de mensajes de validaciones
 spring.messages.always-use-message-format=false
@@ -45,4 +51,5 @@ com.cloudinary.api_secret=LSVG3BdUxdpgxy_vam4KdfprVCU
 
 spring.devtools.restart.poll-interval=2s
 spring.devtools.restart.quiet-period=1s
+springdoc.api-docs.path=/docs
 
