--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-mail:2.7.4'
 	implementation 'org.springdoc:springdoc-openapi-ui:1.6.12'
 	implementation 'org.springdoc:springdoc-openapi-javadoc:1.6.12'
+	implementation 'com.itextpdf:kernel:7.2.3'
+	implementation 'com.itextpdf:html2pdf:4.0.3'
 	annotationProcessor 'com.github.therapi:therapi-runtime-javadoc-scribe:0.13.0'
 	implementation 'com.github.therapi:therapi-runtime-javadoc:0.13.0'
 	compileOnly 'org.projectlombok:lombok'
