--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,9 @@ spring.jpa.show-sql=true
 spring.datasource.url=jdbc:mysql://azure-sql.mysql.database.azure.com:3306/botics
 spring.datasource.username=chris
 spring.datasource.password=Agujeronegro1
+spring.datasource.dbcp2.test-while-idle=true
+spring.datasource.dbcp2.time-between-eviction-runs-millis=3600000
+spring.datasource.dbcp2.validation-query=SELECT 1
 #Base de datos ESFOT
 #spring.datasource.url=mysql://
 #spring.datasource.username=chris
