--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -56,3 +56,6 @@ spring.devtools.restart.poll-interval=2s
 spring.devtools.restart.quiet-period=1s
 springdoc.api-docs.path=/docs
 
+spring.thymeleaf.cache=false
+converterProperties.setBaseUri
+
