Validaciones y respuestas, completo 1.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -40,8 +40,9 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 server.servlet.session.timeout=15m
 #Propiedades de la app referente a JWT token
 botics.app.jwtCookieName=authcookie
+botics.app.jwtIssuer=botics
 botics.app.jwtSecret=boticsSysSecretKey
-botics.app.jwtExpirationMs=600000
+botics.app.jwtExpirationMs=10
 botics.app.jwtRefreshExpirationMs=8640
 botics.app.jwtRefreshCookieName=refreshcookie
 #Tamaño maximo de archivos
