--- a/build.gradle
+++ b/build.gradle
@@ -31,12 +31,14 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'javax.validation:validation-api:2.0.1.Final'
 	implementation group: 'io.jsonwebtoken', name: 'jjwt', version: '0.2'
+	implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.5'
 	implementation 'org.springframework.boot:spring-boot-starter-mail:2.7.4'
 	implementation 'org.springdoc:springdoc-openapi-ui:1.6.12'
 	implementation 'org.springdoc:springdoc-openapi-javadoc:1.6.12'
 	implementation 'com.itextpdf:kernel:7.2.3'
 	implementation 'com.itextpdf:html2pdf:4.0.3'
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf:2.7.5'
+	implementation 'org.hibernate.search:hibernate-search-engine:6.1.7.Final'
 	annotationProcessor 'com.github.therapi:therapi-runtime-javadoc-scribe:0.13.0'
 	implementation 'com.github.therapi:therapi-runtime-javadoc:0.13.0'
 	compileOnly 'org.projectlombok:lombok'
