--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,7 @@ spring.jpa.show-sql=true
 #spring.datasource.url=jdbc:mysql://mysql-onedev.alwaysdata.net/onedev_botics
 #spring.datasource.username=onedev
 #spring.datasource.password=Agujeronegro1
+
 #Base de datos Azure
 spring.datasource.url=jdbc:mysql://azure-sql.mysql.database.azure.com:3306/botics
 spring.datasource.username=chris
@@ -15,6 +16,16 @@ spring.datasource.dbcp2.test-while-idle=true
 spring.datasource.dbcp2.time-between-eviction-runs-millis=3600000
 spring.datasource.dbcp2.validation-query=SELECT 1
 spring.jpa.properties.hibernate.format_sql=true
+
+#base de datos local
+#spring.datasource.url=jdbc:mysql://botics-mysql:3306/botics
+##spring.datasource.username=root
+#spring.datasource.password=1234567
+#spring.datasource.dbcp2.test-while-idle=true
+#spring.datasource.dbcp2.time-between-eviction-runs-millis=3600000
+#spring.datasource.dbcp2.validation-query=SELECT 1
+#spring.jpa.properties.hibernate.format_sql=true
+
 #Properties para la configuracion de archivos de mensajes de validaciones
 spring.messages.always-use-message-format=false
 spring.messages.basename=messages
@@ -24,7 +35,7 @@ spring.messages.fallback-to-system-locale=true
 
 
 #Permite definir el puerto por defecto de la aplicacion, este forma es necesario para el correcto despliegue
-server.port=8080
+server.port=80
 #Properties para la configuracion del servicio de emails con Gmail
 spring.main.banner-mode=off
 spring.mail.protocol=smtp
